--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,10 @@
 plugins {
     id 'java'
+    id 'com.github.johnrengelman.shadow' version '7.1.2'
 }
 
 group = 'org.bali'
-version = '1.1'  // Fixed typo here
+version = '1.2'
 
 repositories {
     mavenCentral()
@@ -16,13 +17,16 @@ repositories {
         url = "https://oss.sonatype.org/content/groups/public/"
     }
 }
-compileJava {
-    options.encoding = 'UTF-8'
-}
 
 dependencies {
+    implementation 'org.apache.httpcomponents:httpmime:4.5.13'
+    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
     compileOnly "io.papermc.paper:paper-api:1.18.2-R0.1-SNAPSHOT"
-    implementation 'com.squareup.okhttp3:okhttp:4.9.1' // Or the latest version
+    implementation 'com.squareup.okhttp3:okhttp:4.9.1'
+}
+
+compileJava {
+    options.encoding = 'UTF-8'
 }
 
 def targetJavaVersion = 17
@@ -49,3 +53,6 @@ processResources {
         expand props
     }
 }
+
+// Make the 'jar' task depend on the 'shadowJar' task
+jar.dependsOn shadowJar
