--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ repositories {
 }
 
 dependencies {
+    implementation group: 'dev.dejvokep', name: 'boosted-yaml', version: '1.3.5'
     implementation 'org.apache.httpcomponents:httpmime:4.5.13'
     implementation 'org.apache.httpcomponents:httpclient:4.5.13'
     compileOnly "io.papermc.paper:paper-api:1.18.2-R0.1-SNAPSHOT"
