--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -2,9 +2,9 @@ name: Java CI with Gradle
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   build:
@@ -19,6 +19,9 @@ jobs:
       with:
         java-version: '17'
         distribution: 'corretto'
+
+    - name: Install xargs
+      run: sudo apt-get update && sudo apt-get install -y findutils
 
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
@@ -38,6 +41,9 @@ jobs:
       with:
         java-version: '17'
         distribution: 'corretto'
+
+    - name: Install xargs
+      run: sudo apt-get update && sudo apt-get install -y findutils
 
     - name: Generate and submit dependency graph
       uses: gradle/actions/dependency-submission@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
