--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,14 +18,12 @@ jobs:
           java-version: '21'
           cache: 'gradle'
 
-      - name: Install xargs
-        run: sudo apt-get update && sudo apt-get install -y findutils
-
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
       - name: Run gradle build lifecycle
-        run: ./gradlew build shadowJar --no-daemon
+        run: |
+          ./gradlew build shadowJar --no-daemon
 
       - name: Upload plugin file
         uses: actions/upload-artifact@v2
